--- a/circle.yml
+++ b/circle.yml
@@ -14,4 +14,4 @@ deployment:
   stable:
     branch: master
     commands:
-    - bumper bump $CIRCLE_PROJECT_USERNAME $CIRCLE_PROJECT_REPONAME && fuse flush
+    - bumper bump $CIRCLE_PROJECT_USERNAME $CIRCLE_PROJECT_REPONAME || fuse flush
